--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h2 id="hello">안녕하세요...</h2>
-    <script src="./script.js"></script>
-</body>
+    <div id="today">
+      <div class="clock">00:00:00</div>
+      <div class="date">2024-07-01 월요일</div>
+      <div class="welcome">Welcome 누구</div>
+    </div>
+
+    <script src="./self.js"></script>
+  </body>
 </html>
